--- a/src/style.css
+++ b/src/style.css
@@ -34,11 +34,9 @@ a:hover {
 }
 
 body {
-  margin: 0;
-  display: flex;
-  place-items: center;
-  min-width: 320px;
-  min-height: 100vh;
+  padding: 0px;
+  margin: 0px;
+  height: 100%;
 }
 
 h1 {
@@ -65,15 +63,10 @@ button:focus-visible {
   outline: 4px auto -webkit-focus-ring-color;
 }
 
-.card {
-  padding: 2em;
-}
-
 #app {
-  max-width: 1280px;
-  margin: 0 auto;
-  padding: 2rem;
-  text-align: center;
+  width: 100%;
+  /* height: 100%; */
+  height: 600px;
 }
 
 @media (prefers-color-scheme: light) {
